--- a/src/design/layout/overlay.css
+++ b/src/design/layout/overlay.css
@@ -1,8 +1,8 @@
 .overlay-frame {
   contain: layout;
   display: flex;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   align-items: center;
   justify-content: center;
   margin: 0;
